--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prettier": "1.16.4",
     "rollup": "^1.6.0",
     "rollup-plugin-typescript2": "^0.19.3",
+    "sinon": "^7.2.7",
     "ts-jest": "^24.0.0",
     "tslint": "^5.13.1",
     "typescript": "^3.3.3333"
